Add radio buttons for HTML, CSS, and JavaScript
Added radio buttons for language selection in the form.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+    <head> Form tag </head>
+    <title>Form tag and its attributes</title>
+    <body>
+        <input type ="radio" id="html" name="f_lang">
+        <label for="html">HTML</label>
+        <input type="radio" id="CSS" nmae="f_lang">
+        <label for="CSS">CSS</label>
+        <input type="radio" id="JS" name="f_lang">
+        <label for="JS">JavaScript</label>
+    </body>
+</html>
