Correct head section and title in index.html
Fix the head section and correct the title placement.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head> Form tag </head>
-    <title>Form tag and its attributes</title>
+    <head> <title>Form tag and its attributes</title> </head>
+    
     <body>
         <input type ="radio" id="html" name="f_lang">
         <label for="html">HTML</label>
