Fix typo in CSS radio button name attribute

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <body>
         <input type ="radio" id="html" name="f_lang">
         <label for="html">HTML</label>
-        <input type="radio" id="CSS" nmae="f_lang">
+        <input type="radio" id="CSS" name="f_lang">
         <label for="CSS">CSS</label>
         <input type="radio" id="JS" name="f_lang">
         <label for="JS">JavaScript</label>
+        <hr color = "red" size = "3">
     </body>
 </html>
